* [2017-09-03] release 1.3.2 of LibTMCG
* [2017-08-23] DKG-tools: added FIPS 186-4 compliance for dkg-gencrs
* [2017-08-20] RBC: implements a synchonization mechanism in Sync()
* [2017-08-17] RBC: important bugfixes in Deliver() and DeliverFrom()
* [2017-08-09] DKG-tools: added built-in TCP/IP message exchange (option "-H")
* [2017-08-09] added configure feature --disable-dkgtools
* [2017-08-07] DKG-tools: added option "-P" for setting aiounicast passwords
* [2017-08-04] DKG-tools: changed storage of public data for shared keys (DKG)
* [2017-07-30] DKG-tools: added dkg-revoke for revocation of a shared key
* [2017-07-30] RFC4880: interface of PacketDecode() changed
* [2017-07-28] RFC4880: added interfaces for key revocation signatures
* [2017-07-27] DKG-tools: added dkg-sign for creating detached signatures
* [2017-07-27] DKG-tools: added option "-e" for expiration of keys and sigs
* [2017-07-27] RFC4880: more interfaces for signatures changed or added
* [2017-07-23] RFC4880: interface of Packet{Pub,Sec}Encode() changed 
* [2017-07-22] RFC4880: interface of PacketS{ub,sb}Encode() changed for DSA
* [2017-07-22] DKG-tools: added option "-s" for generating a shared DSA key
* [2017-07-21] added threshold DSS/DSA scheme of Canetti et al. (ASTC, DSS)
* [2017-06-27] DKG-tools: improved interactive version of dkg-decrypt
* [2017-06-20] added Pedersen's verifiable secret sharing (VSS) protocol
* [2017-06-15] RBC: added sequence counter separation for subprotocols
* [2017-06-12] RFC4880: added support for other hash algorithms in DSA
* [2017-06-03] DKG-tools: added options "-i" and "-o" for dkg-decrypt
* [2017-06-02] DKG-tools: added support for other symmetric algorithms
* [2017-06-02] RFC4880: added generic SymmetricDecrypt() for full RFC compliance
* [2017-05-25] release 1.3.1 of LibTMCG
* [2017-05-25] VSSHE: added a simple variant of SetupGenerators_publiccoin()
* [2017-05-19] DKG: use very strong randomness from libgcrypt (long term keys)