@@ -1,3 +1,4 @@
+* [2017-09-05] DKG-tools: fixes upper limit of t-resilience by option "-t"
 * [2017-09-03] release 1.3.2 of LibTMCG
 * [2017-08-23] DKG-tools: added FIPS 186-4 compliance for dkg-gencrs
 * [2017-08-20] RBC: implements a synchonization mechanism in Sync()
